# AMR

./: .gitignore  AGENTS.md  Levantar solo backend.txt  README.md  docker-compose.api.yml  docker-compose.override.yml  docker-compose.yml
api/: Crear un nuevo endpoint.txt  Dockerfile  readme estructura de carpetas.txt  requirements.txt
api/app/: main.py
api/app/core/: config.py  db.py  logging_config.py  ros.py  schemas.py
api/tests/: conftest.py
api/tests/integration/: test_maps_router.py
maps/: Nuevo.pgm  Nuevo.yaml  Turtle1.yaml  incompleto1.pgm  incompleto1.yaml  miposegraph.data  miposegraph.posegraph  turtle.pgm  turtle.yaml
maps/install/: local_setup.sh  setup.sh
maps/log/: latest_build
orchestrator/orchestrator/: main.py
turtlebot3-sim/: Dockerfile  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh
turtlebot3-sim/maps/: Turtle1.pgm  Turtle1.yaml  hola.pgm  hola.yaml
turtlebot3-sim/orchestrator/: package.xml  setup.py
turtlebot3-sim/orchestrator/launch/: system_launch.py
turtlebot3-sim/orchestrator/orchestrator/: main.py
ui_web/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
ui_web/src/: App.jsx  AuthContext.jsx  ProtectedRoute.jsx  main.jsx  styles.css
ui_web/src/components/: Jog.jsx  Joystick.jsx  LogTable.jsx  Map.jsx  NewMapButton.jsx  SaveMapButton.jsx  TelemetryCard.jsx
ui_web/src/context/: DataContext.jsx
ui_web/src/pages/: Dashboard.jsx  Login.jsx  Maps.jsx  Missions.jsx  Points.jsx  Settings.jsx  Users.jsx  index.js
ui_web/src/services/: api.js  (+3 more)
(+17 files in other folders)
